# formato

./: .gitignore  Cargo.toml  LICENCE-APACHE  LICENSE  readme.md
bench/: Cargo.toml  rustfmt.toml
bench/benches/: benchmarks.rs  results.txt
bench/src/: main.rs
formato/: Cargo.toml  README.md
formato/src/: calc.rs  comps.rs  duration.rs  impls.rs  lib.rs  tests.rs
src/: calc.rs  div1000.rs  lib.rs  mul100.rs  tests.rs
